--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://aleixanadon.github.io/counter-app",
+  "homepage": "<https://aleixanadon.github.io/counter-app>",
   "name": "counter-app",
   "private": true,
   "version": "0.0.0",
